# hdf5-direct

./: .gitignore  BTREE_RECURSION_SPEC.md  CHANGELOG.md  CI.md  COMPILATION_HARDENING_COMPLETE.md  COMPLETION_SUMMARY.md  EXTENDED_ADDRESSING.md  EXTENDED_ADDRESSING_IMPLEMENTATION.md  HEURISTIC_REMOVAL.md  INDEX.md  IO_REFACTORING.md  MEMORY_OPTIMIZATION.md  Makefile  README.md  STRICT_PARSING_IMPLEMENTATION.md  SUPERBLOCK_VERSIONS.md  TEST_PLAN.md  TEST_RESULTS.md  download-kosarak.sh  download-test-files.sh  hdf5-direct.cabal  stack.yaml  test-debug.hs  test-discover.hs  test-kosarak-debug.hs  test-output.txt  test-snod-addrs.hs
.github/workflows/: haskell.yml  quick-check.yml  stack.yml
app/: Main.hs
bench/: Main.hs
src/Data/HDF5/Direct/: Internal.hs  Massiv.hs
test/: IntegrationSpec.hs  LibSpec.hs  MassivMultidimSpec.hs  QuickCheckSpec.hs
test-data/: invalid.h5
