cabal-version:       2.2

name:                hdf5-direct
version:             0.1.0.0
synopsis:            Direct HDF5 bindings
description:         Direct bindings to the HDF5 file format (without using C/C++ bindings).
homepage:            https://github.com/ocramz/hdf5-direct
license:             BSD-3-Clause
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2025 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Data.HDF5.Direct.Internal
                     , Data.HDF5.Direct.Massiv
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.13
                     , binary >= 0.8 && < 0.9
                     , mmap >= 0.5 && < 0.6
                     , massiv >= 1.0 && < 1.1
                     , vector >= 0.12 && < 0.14
                     , directory >= 1.3 && < 1.4
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable hdf5-direct
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hdf5-direct
                     , bytestring >= 0.10 && < 0.13
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints
--                        -threaded
--                        -rtsopts
--                        -with-rtsopts=-N

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
                     , IntegrationSpec
                     , QuickCheckSpec
                     , MassivMultidimSpec
  build-depends:       base
                     , hdf5-direct
                     , hspec
                     , QuickCheck
                     , bytestring >= 0.10 && < 0.13
                     , binary >= 0.8 && < 0.9
                     , mmap >= 0.5 && < 0.6
                     , massiv >= 1.0 && < 1.1
                     , directory
                     , filepath
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/ocramz/hdf5-direct
